--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -25,9 +25,9 @@
         --style-accent-color: {{ settings.style_header_accent_color }};
 
         {%- if headerAccentColorBrightness > 190 -%}
-            --style-accent-text-color: #000;
+            --style-accent-text-color: {{ '#000000' | color_min_contrast: settings.style_header_accent_color }};
         {%- else -%}
-            --style-accent-text-color: #fff;
+            --style-accent-text-color: {{ '#ffffff' | color_min_contrast: settings.style_header_accent_color }};
         {%- endif -%}
 
         {%- if headerContentColorBrightness > 190 -%}
@@ -159,10 +159,10 @@
         --style-icon-color: {{ section.settings.secondaryContentColor }};
         --style-accent-color: {{ section.settings.secondaryContentColor }};
 
-        {%- if headerSecondaryContentColorBrightness | color_brightness > 190 -%}
-            --style-accent-text-color: #000;
+        {%- if headerSecondaryContentColorBrightness > 190 -%}
+            --style-accent-text-color: {{ '#000000' | color_min_contrast: settings.style_header_accent_color }}
         {%- else -%}
-            --style-accent-text-color: #fff;
+           --style-accent-text-color: {{ '#ffffff' | color_min_contrast: settings.style_header_accent_color }}
         {%- endif -%}
 
         --bs-body-bg: transparent;
@@ -1102,12 +1102,12 @@
                                 {{- section.settings.logoSize -}},{{- section.settings.logoSize | times: 0.5 | ceil -}}
                             {%- endcapture -%}
 
-                            {% if section.settings.secondarylogoImg and request.page_type == 'frontpage' %}
+                            {% if section.settings.secondaryLogoImg and request.page_type == 'frontpage' %}
 
                                 <img
                                     alt="{{ store.name }}"
-                                    src="{{ section.settings.secondarylogoImg | thumb: imgSize }}"
-                                    srcset="{{ section.settings.secondarylogoImg | thumb: imgSize }} 1x, {{ section.settings.secondarylogoImg | thumb: imgSize | thumb:'@2x' }} 2x" class="d-block img-fluid site-header-secondary-logo-img{% if section.settings.logoImg %} has-multiple-logos{% endif %}">
+                                    src="{{ section.settings.secondaryLogoImg | thumb: imgSize }}"
+                                    srcset="{{ section.settings.secondaryLogoImg | thumb: imgSize }} 1x, {{ section.settings.secondaryLogoImg | thumb: imgSize | thumb:'@2x' }} 2x" class="d-block img-fluid site-header-secondary-logo-img{% if section.settings.logoImg %} has-multiple-logos{% endif %}">
 
                             {% endif %}
 
@@ -1121,7 +1121,7 @@
 
                             {% endif %}
 
-                            {% unless section.settings.logoImg or section.settings.secondarylogoImg %}
+                            {% unless section.settings.logoImg or section.settings.secondaryLogoImg %}
 
                                 <span class="site-header-logo-text">
                                     {{ store.name }}
@@ -1971,7 +1971,7 @@
                             }
                         },
                         {
-                            "id": "secondarylogoImg",
+                            "id": "secondaryLogoImg",
                             "type": "image-picker",
                             "label": {
                                 "en": "Logo for transparent background",
@@ -2114,8 +2114,8 @@
                             "id": "mobileNavigationSimple",
                             "type": "checkbox",
                             "label": {
-                                "en": "Simple mobile navigation",
-                                "fi": "Yksinkertainen mobiilinavigaatio"
+                                "en": "Show mobile navigation in a simple design",
+                                "fi": "Näytä mobiilinavigaatio yksinkertaisena"
                             },
                             "default": false
                         },
@@ -2123,8 +2123,8 @@
                             "id": "mobileShowSocialIconsInNavigation",
                             "type": "checkbox",
                             "label": {
-                                "en": "Show social media icons",
-                                "fi": "Näytä sosiaalisen median kuvakkeet"
+                                "en": "Show social media icons in mobile navigation",
+                                "fi": "Näytä mobiilinavigaatiossa sosiaalisen median kuvakkeet"
                             },
                             "default": true
                         },
@@ -2132,8 +2132,8 @@
                             "id": "mobileShowSearchInNavigation",
                             "type": "checkbox",
                             "label": {
-                                "en": "Show search in navigation",
-                                "fi": "Näytä näytä haku navigaatiossa"
+                                "en": "Show search box in mobile navigation",
+                                "fi": "Näytä mobiilinavigaatiossa hakukenttä"
                             },
                             "default": true
                         }
