--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -384,7 +384,7 @@
 
                     <div class="site-mobile-header-item">
 
-                        <button type="button" class="site-mobile-navigation-toggle btn btn-text">
+                        <button type="button" class="site-mobile-navigation-toggle btn btn-text" aria-label="{{ 'general.navigation' | t }}">
 
                             {%- render 'icon', icon: 'navigation-menu', class: 'svg-icon-fw' -%}
                             {%- render 'icon', icon: 'close', class: 'd-none' -%}
@@ -397,7 +397,7 @@
 
                         <div class="site-mobile-header-item site-mobile-header-item-search">
 
-                            <button type="button" class="site-search-toggle btn btn-text">
+                            <button type="button" class="site-search-toggle btn btn-text" aria-label="{{ 'general.search' | t }}">
 
                                 {%- render 'icon', icon: 'search', class: 'svg-icon-fw' -%}
 
@@ -484,7 +484,7 @@
 
                         <div class="site-mobile-header-item site-mobile-header-item-search">
 
-                            <button type="button" class="site-search-toggle btn btn-text">
+                            <button type="button" class="site-search-toggle btn btn-text" aria-label="{{ 'general.search' | t }}">
 
                                 {%- render 'icon', icon: 'search', class: 'svg-icon-fw' -%}
 
@@ -514,7 +514,7 @@
 
                         <div class="site-mobile-header-item site-mobile-header-item-wishlist">
 
-                            <a href="{{ routes.account_wishlist_url }}" class="btn btn-text">
+                            <a href="{{ routes.account_wishlist_url }}" class="btn btn-text" aria-label="{{ 'wishlist.title' | t }}">
 
                                 <span class="site-mobile-header-item-counter{% if wishlist.products.size > 0 %} has-items{% endif %}">
 
@@ -534,7 +534,7 @@
 
                     <div class="site-mobile-header-item site-mobile-header-item-cart">
 
-                        <a href="{{ routes.cart_url }}" class="btn btn-text">
+                        <a href="{{ routes.cart_url }}" class="btn btn-text" aria-label="{{ 'cart.title' | t }}">
 
                             <span class="site-mobile-header-item-counter{% if cart.items.size > 0 %} has-items{% endif %}">
 
@@ -1180,7 +1180,7 @@
 
                         <div class="site-header-item site-header-item-search">
 
-                            <button type="button" class="site-search-toggle btn btn-text">
+                            <button type="button" class="site-search-toggle btn btn-text" aria-label="{{ 'general.search' | t }}">
 
                                 {%- render 'icon', icon: 'search' -%}
 
@@ -1194,7 +1194,7 @@
 
                         <div class="site-header-item site-header-item-account">
 
-                            <a href="{{ session.logged_in | yepnope: routes.account_url, routes.account_login_url }}" class="btn btn-text">
+                            <a href="{{ session.logged_in | yepnope: routes.account_url, routes.account_login_url }}" class="btn btn-text" aria-label="{{ session.logged_in | yepnope: 'account.title', 'login.title' | t }}">
 
                                 {%- render 'icon', icon: 'user' -%}
 
@@ -1208,7 +1208,7 @@
 
                         <div class="site-header-item site-header-item-wishlist">
 
-                            <a href="{{ routes.account_wishlist_url }}" class="btn btn-text">
+                            <a href="{{ routes.account_wishlist_url }}" class="btn btn-text" aria-label="{{ 'wishlist.title' | t }}">
 
                                 <span class="site-header-item-counter{% if wishlist.products.size > 0 %} has-items{% endif %}">
 
@@ -1228,7 +1228,7 @@
 
                     <div class="site-header-item site-header-item-cart">
 
-                        <a href="{{ routes.cart_url }}" class="btn btn-text">
+                        <a href="{{ routes.cart_url }}" class="btn btn-text" aria-label="{{ 'cart.title' | t }}">
 
                             <span class="site-header-item-counter{% if cart.items.size > 0 %} has-items{% endif %}">
 
