--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -757,7 +757,8 @@
                                 <button
                                     type="button"
                                     id="product-show-reviews"
-                                    class="btn btn-text">
+                                    class="btn btn-text"
+                                    aria-label="{{ 'product.show_reviews' | t }}">
 
                                     <div class="product-review-icons">
 
@@ -845,7 +846,7 @@
 
                                 <div class="product-vat mt-1">
 
-                                    {% assign itemTaxPercent = settings.taxFreeShopping == true | yepnope: 0, product.default_or_selected_variant.rate | round %}
+                                    {% assign itemTaxPercent = settings.taxFreeShopping == true | yepnope: 0, product.default_or_selected_variant.rate %}
 
                                     <span class="product-vat-text text-muted">
                                         {{- 'product.vat_included_dynamic' | t, amount: itemTaxPercent -}}
@@ -1033,7 +1034,8 @@
                                                         type="button"
                                                         class="btn btn-text ms-1 btn btn-text p-2 product-wishlist-action bordered"
                                                         data-wishlist-toggle="{{ product.id }}"
-                                                        aria-pressed="{{ product.default_or_selected_variant.in_customers_wishlist | yepnope: 'true', 'false' }}">
+                                                        aria-pressed="{{ product.default_or_selected_variant.in_customers_wishlist | yepnope: 'true', 'false' }}"
+                                                        aria-label="{{ product.default_or_selected_variant.in_customers_wishlist | yepnope: 'wishlist.remove', 'wishlist.add' | t }}">
                                                         {%- render 'icon', icon: 'like', class: 'svg-icon-lg svg-icon-fw' -%}
                                                     </button>
 
@@ -1053,7 +1055,7 @@
 
                                                     <div class="product-quantity">
 
-                                                        <button type="button" class="btn btn-text product-quantity-decrease">
+                                                        <button type="button" class="btn btn-text product-quantity-decrease" aria-label="{{ 'general.decrease' | t }}">
                                                             {%- render 'icon', icon: 'subtract' -%}
                                                         </button>
 
@@ -1066,7 +1068,7 @@
                                                             min="{% if product.min_quantity %}{{ product.min_quantity }}{% else %}1{% endif %}"
                                                             {% if product.max_quantity %}max="{{ product.max_quantity }}"{% endif %}pattern="[0-9]{1,3}">
 
-                                                        <button type="button" class="btn btn-text product-quantity-increase">
+                                                        <button type="button" class="btn btn-text product-quantity-increase" aria-label="{{ 'general.increase' | t }}">
                                                             {%- render 'icon', icon: 'add' -%}
                                                         </button>
 
@@ -1092,7 +1094,8 @@
                                                         type="button"
                                                         class="btn btn-text ms-1 btn btn-text p-2 product-wishlist-action bordered"
                                                         data-wishlist-toggle="{{ product.id }}"
-                                                        aria-pressed="{{ product.default_or_selected_variant.in_customers_wishlist | yepnope: 'true', 'false' }}">
+                                                        aria-pressed="{{ product.default_or_selected_variant.in_customers_wishlist | yepnope: 'true', 'false' }}"
+                                                        aria-label="{{ product.default_or_selected_variant.in_customers_wishlist | yepnope: 'wishlist.remove', 'wishlist.add' | t }}">
                                                         {%- render 'icon', icon: 'like', class: 'svg-icon-lg svg-icon-fw' -%}
                                                     </button>
 
@@ -1201,7 +1204,7 @@
                                                         
                                                             {%- render 'icon', icon: 'like', class: 'svg-icon-lg svg-icon-fw' -%}
                                                             
-                                                            <span class="text">
+                                                            <span class="text pe-none">
 
                                                                 {%- if product.default_or_selected_variant.in_customers_wishlist -%}
                                                                     {{- 'wishlist.remove' | t -}}
@@ -1303,7 +1306,8 @@
                                                     type="button"
                                                     class="btn btn-text ms-1 btn btn-text p-2 product-wishlist-action bordered"
                                                     data-wishlist-toggle="{{ product.id }}"
-                                                    aria-pressed="{{ product.default_or_selected_variant.in_customers_wishlist | yepnope: 'true', 'false' }}">
+                                                    aria-pressed="{{ product.default_or_selected_variant.in_customers_wishlist | yepnope: 'true', 'false' }}"
+                                                    aria-label="{{ product.default_or_selected_variant.in_customers_wishlist | yepnope: 'wishlist.remove', 'wishlist.add' | t }}">
                                                     {%- render 'icon', icon: 'like', class: 'svg-icon-lg svg-icon-fw' -%}
                                                 </button>
 
@@ -1763,9 +1767,13 @@
 
                                                         <div class="product-review-content">
 
-                                                            <p class="mb-0">
-                                                                <strong>{{ review.title }}</strong>
-                                                            </p>
+                                                            {% if review.title %}
+
+                                                                <p class="mb-0 fw-medium">
+                                                                    {{ review.title }}
+                                                                </p>
+
+                                                            {% endif %}
 
                                                             {{ review.review }}
 
@@ -2183,10 +2191,11 @@
                                     document.addEventListener('theme:ready', function() {
                                         document.dispatchEvent(new CustomEvent('theme:contact:sendEmail'));
                                         theme.bs.Modal.getOrCreateInstance('#product-question-modal')?.show();
+                                        setTimeout(() => theme.bs.Modal.getOrCreateInstance('#product-question-modal')?.hide(), 5000);
                                     });
                                 </script>
 
-                                <p class="my-4">
+                                <p class="my-4 text-center">
                                     {{- 'product.question.success' | t -}}
                                 </p>
 
@@ -2523,16 +2532,17 @@
                             <script type="application/javascript">
                                 document.addEventListener('theme:ready', function() {
                                     theme.bs.Modal.getOrCreateInstance('#availability-notification-modal')?.show();
+                                    setTimeout(() => theme.bs.Modal.getOrCreateInstance('#availability-notification-modal')?.hide(), 5000);
                                 });
                             </script>
 
-                            <p class="my-4">
+                            <p class="my-4 text-center">
                                 {{- 'product.availability_notification.success' | t -}}
                             </p>
 
                         {% elsif product.subscribed_to_notifications %}
 
-                            <p class="my-4">
+                            <p class="my-4 text-center">
                                 {{- 'product.availability_notification.already_subscribed' | t -}}
                             </p>
 
